2003-02-07  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3167025 -- REGRESSION: http://www.buypcdirect.com doesn't wrap correctly b/c of huge cell width value

        * khtml/rendering/table_layout.h: Make the fields in the Layout structure used in table
        width computations use int instead of short.
        * khtml/rendering/table_layout.cpp:
        (FixedTableLayout::calcMinMaxWidth): Make sure we don't overflow m_minWidth or m_maxWidth in case the
        specified fixed width value is huge.
        (FixedTableLayout::layout): Use ints for the calcWidth array instead of shorts.
        (AutoTableLayout::calcMinMaxWidth): Clamp both maxWidth and minWidth to 0x7fff to match the other code in
        this file, rather than using 10000.

2003-02-06  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3140738 -- textarea contents are LF delimited instead of CRLF

        * khtml/html/html_formimpl.cpp:
        (encodeCString): Turn CR followed by something other than LF into CRLF.
        (fixLineBreaks): Added. Turns stray CRs and LFs into CRLF.
        (HTMLFormElementImpl::formData): Call fixLineBreaks on form data.

        - fixed 3167235 -- REGRESSION: assert after clicking on a link on radioslack.com

        * kwq/KWQTextCodec.mm: (KWQTextDecoder::toUnicode): Return the null string
        if the passed in string pointer is NULL, rather than asserting.

2003-02-06  David Hyatt  <hyatt@apple.com>

	Fix rollingstone regression.
	
        Reviewed by mjs

        * khtml/rendering/render_object.cpp:
        (RenderObject::setLayouted):

2003-02-06  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed 3166693 -- REGRESSION: infinite recursion in makeFirstResponder while tabbing as page loaded

        Because we now deliver blur events, we are triggering a handler on this page that changes focus.